--- a/capitulos/06MezclaModelos.qmd
+++ b/capitulos/06MezclaModelos.qmd
@@ -1,3 +1,61 @@
 # Mezcla de Modelos
 
 El **objetivo** de la unidad es 
+
+## Paquetes usados {.unnumbered}
+
+```{python}
+#| echo: true
+from EvoMSA import BoW
+from microtc.utils import tweet_iterator
+```
+
+```{python}
+#| echo: false
+from IPython.display import Markdown
+```
+
+```{python}
+#| echo: false
+from os.path import isfile, isdir
+from EvoMSA.utils import Download
+from EvoMSA import utils
+utils.USE_TQDM = False
+if not isfile('delitos.zip'):
+    Download('https://github.com/INGEOTEC/Delitos/releases/download/Datos/delitos.zip',
+             'delitos.zip')
+if not isdir('delitos'):
+    !unzip -Pingeotec delitos.zip
+```
+
+::: {.content-visible when-format="html"}
+---
+
+**Video explicando la unidad**
+
+---
+:::
+
+## Conjunto de Datos 
+
+El conjunto de datos se puede conseguir en la página de [Delitos](https://ingeotec.github.io/Delitos) aunque en esta dirección es necesario poblar los textos dado que solamente se encuentra el identificador del Tweet.
+
+Para leer los datos del conjunto de entrenamiento y prueba se utilizan las siguientes instrucciones. En la variable `D` se tiene los datos que se utilizarán para entrenar el clasificador basado en la bolsa de palabras y en `Dtest` los datos del conjunto de prueba, que son usados para medir el rendimiento del clasificador.
+
+```{python}
+#| echo: true
+fname = 'delitos/delitos_ingeotec_Es_train.json'
+fname_test = 'delitos/delitos_ingeotec_Es_test.json'
+D = list(tweet_iterator(fname))
+Dtest = list(tweet_iterator(fname_test))
+```
+
+En la siguiente instrucción se observa el primer elemento del conjunto de entrenamiento. Se puede observar que en el campo `text` se encuentra el texto, el campo `klass` representa la etiqueta o clase, donde $0$ representa la clase negativa y $1$ la clase positiva, es decir, la presencia de un delito. El campo `id` es el identificador del Tweet y `annotations` son las clases dadas por los etiquetadores a ese ejemplo.
+
+```{python}
+#| echo: true
+D[81]
+```
+
+## Bolsa de Palabras Dispersa 
+
